[tool.poetry]
name = "nexus-raven-client"
version = "0.1.0"
description = ""
authors = ["Wiktor Sobanski"]
license = "\\"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
charset-normalizer = "^3.3.2"
openai = "^1.11.1"
aiohttp = "^3.9.3"
arrow = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
